update from master

--- a/manpages/csv-grep.1.html
+++ b/manpages/csv-grep.1.html
@@ -25,7 +25,7 @@
 <dd>use <em>PATTERN</em> as a basic regular expression pattern
 </dd>
 <dt>-E <em>PATTERN</em></dt>
-<dd>use <em>PATTERN</em> as a extended regular expression pattern
+<dd>use <em>PATTERN</em> as an extended regular expression pattern
 </dd>
 <dt>-F <em>STRING</em></dt>
 <dd>use <em>STRING</em> as a fixed string pattern
