--- a/manpages/csv-header.1.html
+++ b/manpages/csv-header.1.html
@@ -18,7 +18,7 @@
 <h1 id="description">DESCRIPTION</h1>
 <p>Read CSV stream from standard input and print back to standard output with the column header transformed.</p>
 <dl>
-<dt>-A, --add-types <em>NAME1</em>:<em>TYPE1</em>[,<em>NAME2</em>:<em>TYPE2</em>]</dt>
+<dt>-A, --add-types <em>NAME1</em>:<em>TYPE1</em>[,<em>NAME2</em>:<em>TYPE2</em>...]</dt>
 <dd>(NOT IMPLEMENTED YET) add type <em>TYPE1</em> to column <em>NAME1</em>, <em>TYPE2</em> to column <em>NAME2</em>, etc.
 </dd>
 <dt>-C, --change-type <em>NAME</em>:<em>TYPE</em></dt>
