--- a/manpages/csv-sum.1.html
+++ b/manpages/csv-sum.1.html
@@ -21,6 +21,9 @@
 <dt>-c, --columns=<em>NAME1</em>[,<em>NAME2</em>...]</dt>
 <dd>use these columns
 </dd>
+<dt>-e, --separator=<em>STR</em></dt>
+<dd>put <em>STR</em> between (string) values
+</dd>
 <dt>-s, --show</dt>
 <dd>print output in table format
 </dd>
