--- a/manpages/csv-add-rpn.1.html
+++ b/manpages/csv-add-rpn.1.html
@@ -18,11 +18,11 @@
 <h1 id="description">DESCRIPTION</h1>
 <p>Read CSV stream from standard input and print it back to standard output with a new column produced by evaluation of RPN (reverse Polish notation) expression.</p>
 <dl>
-<dt>-n <em>NEW-NAME</em></dt>
-<dd>create column <em>NEW-NAME</em> as an output
-</dd>
 <dt>-e <em>RPN-EXPR</em></dt>
 <dd>use expression <em>RPN-EXPR</em> to create new column; RPN expressions use space as a separator, so this needs to be quoted
+</dd>
+<dt>-n <em>NEW-NAME</em></dt>
+<dd>create column <em>NEW-NAME</em> as an output
 </dd>
 <dt>-s, --show</dt>
 <dd>print output in table format
@@ -238,7 +238,7 @@
 <td>%str 1 3 substr</td>
 </tr>
 <tr class="odd">
-<td>strlen/length</td>
+<td>strlen,length</td>
 <td>string length</td>
 <td>%str strlen, %str length</td>
 </tr>
