update from master

--- a/manpages/csv-merge.1.html
+++ b/manpages/csv-merge.1.html
@@ -50,6 +50,6 @@
 </dd>
 </dl>
 <h1 id="see-also">SEE ALSO</h1>
-<p><strong><a href="csv-sqlite.1.html">csv-sqlite</a></strong>(1), <strong><a href="csv-show.1.html">csv-show</a></strong>(1), <strong><a href="csv-nix-tools.7.html">csv-nix-tools</a></strong>(7)</p>
+<p><strong><a href="csv-tables-tut.7.html">csv-tables-tut</a></strong>(7), <strong><a href="csv-sqlite.1.html">csv-sqlite</a></strong>(1), <strong><a href="csv-show.1.html">csv-show</a></strong>(1), <strong><a href="csv-nix-tools.7.html">csv-nix-tools</a></strong>(7)</p>
 </body>
 </html>
