--- a/manpages/csv-nix-tools.7.html
+++ b/manpages/csv-nix-tools.7.html
@@ -27,6 +27,7 @@
 <li>processing of data from one table at the time,</li>
 <li>combining data from multiple tables, based on relation between them</li>
 </ul>
+<p>See <strong><a href="csv-tables-tut.7.html">csv-tables-tut</a></strong>(7) for introduction into tables support in csv-nix-tools.</p>
 <h1 id="source-tools">SOURCE TOOLS</h1>
 <ul>
 <li><strong><a href="csv-env.1.html">csv-env</a></strong>(1) - list environment variables</li>
@@ -90,7 +91,7 @@
 <dd>produce output as table
 </dd>
 </dl>
-<p>Options -M/-N/-T can be used to merge output of multiple source tools, to be ultimately consumed by <strong><a href="csv-sqlite.1.html">csv-sqlite</a></strong>(1).</p>
+<p>Options -M/-N/-T can be used to merge output of multiple source tools, to be ultimately consumed by <strong><a href="csv-sqlite.1.html">csv-sqlite</a></strong>(1). See <strong><a href="csv-tables-tut.7.html">csv-tables-tut</a></strong>(7) for one example.</p>
 <h1 id="common-options-for-all-source-and-processing-tools">COMMON OPTIONS FOR ALL SOURCE AND PROCESSING TOOLS</h1>
 <dl>
 <dt>-s, --show</dt>
