--- a/manpages/csv-show.1.html
+++ b/manpages/csv-show.1.html
@@ -27,8 +27,10 @@
 <li>half screen (left and right keys)</li>
 <li>one line (up and down keys)</li>
 <li>one screen (page up, backspace, page down and space keys)</li>
-<li>to the beginning of the line (home key)</li>
-<li>to the end of the line (end key)</li>
+<li>to the beginning of the file (home key)</li>
+<li>to the beginning of the line (shift + home key)</li>
+<li>to the end of the file (end key)</li>
+<li>to the end of the line (shift + end key)</li>
 </ul></li>
 <li><p>doesn't support searching (yet)</p></li>
 </ul>
