update from master

--- a/manpages/csv-min.1.html
+++ b/manpages/csv-min.1.html
@@ -21,6 +21,9 @@
 <dt>-c, --columns=<em>NAME1</em>[,<em>NAME2</em>...]</dt>
 <dd>use these columns
 </dd>
+<dt>-n <em>NEW-NAME1</em>[,<em>NEW-NAME2</em>]</dt>
+<dd>create columns with these names, instead of default min(NAME)
+</dd>
 <dt>-s, --show</dt>
 <dd>print output in table format
 </dd>
