--- a/manpages/csv-sql.1.html
+++ b/manpages/csv-sql.1.html
@@ -36,7 +36,7 @@
 <p><code>SELECT columns [FROM input] [WHERE condition]</code></p>
 <p>Only <strong>columns</strong> are required. FROM supports only &quot;input&quot; table and is thus optional. &quot;WHERE condition&quot; is optional. &quot;ORDER BY&quot; is not supported.</p>
 <p>No aggregate or window functions are supported.</p>
-<p>Columns is comma separated list of column names or expressions, with each one optonally followed by &quot;AS new-column-name&quot; giving it a new name.</p>
+<p>Columns is comma separated list of column names or expressions, with each one optionally followed by &quot;AS new-column-name&quot; giving it a new name.</p>
 <p>Constants:</p>
 <table>
 <thead>
