--- a/manpages/csv-sum.1.html
+++ b/manpages/csv-sum.1.html
@@ -24,6 +24,9 @@
 <dt>-e, --separator=<em>STR</em></dt>
 <dd>put <em>STR</em> between (string) values
 </dd>
+<dt>-n <em>NEW-NAME1</em>[,<em>NEW-NAME2</em>]</dt>
+<dd>create columns with these names, instead of default sum(NAME)
+</dd>
 <dt>-s, --show</dt>
 <dd>print output in table format
 </dd>
