updates from master

--- a/manpages/csv-add-concat.1.html
+++ b/manpages/csv-add-concat.1.html
@@ -36,7 +36,7 @@
 </dl>
 <h1 id="examples">EXAMPLES</h1>
 <dl>
-<dt>csv-ls -R -c parent,name . | csv-add-concat -s -- full_path = %parent / %name</dt>
+<dt><code>csv-ls -R -c parent,name . | csv-add-concat -s -- full_path = %parent / %name</code></dt>
 <dd>list files with their full path
 </dd>
 </dl>
