--- a/manpages/csv-add-exec.1.html
+++ b/manpages/csv-add-exec.1.html
@@ -42,7 +42,7 @@
 </dl>
 <h1 id="examples">EXAMPLES</h1>
 <dl>
-<dt>csv-ls -c full_path | csv-add-exec -s -c full_path -n new -- sed 's/.c$/.o/'</dt>
+<dt><code>csv-ls -c full_path | csv-add-exec -s -c full_path -n new -- sed 's/.c$/.o/'</code></dt>
 <dd>list files; if file has .c extension it will be replaced by .o extension
 </dd>
 </dl>
