--- a/manpages/csv-add-rpn.1.html
+++ b/manpages/csv-add-rpn.1.html
@@ -296,7 +296,7 @@
 </table>
 <h1 id="examples">EXAMPLES</h1>
 <dl>
-<dt>csv-ls -c name,size,blocks | csv-add-rpn -n space_used -e <code>&quot;</code>%blocks 512 *<code>&quot;</code> -s</dt>
+<dt><code>csv-ls -c name,size,blocks | csv-add-rpn -n space_used -e &quot;%blocks 512 *&quot; -s</code></dt>
 <dd>list files and real space they use
 </dd>
 </dl>
