--- a/manpages/csv-add-split.1.html
+++ b/manpages/csv-add-split.1.html
@@ -51,7 +51,7 @@
 </dl>
 <h1 id="examples">EXAMPLES</h1>
 <dl>
-<dt>csv-ls | csv-add-split -c name -e . -n base,ext -s</dt>
+<dt><code>csv-ls | csv-add-split -c name -e . -n base,ext -s</code></dt>
 <dd>list files with base and extension in columns base and ext
 </dd>
 </dl>
