--- a/manpages/csv-add-sql.1.html
+++ b/manpages/csv-add-sql.1.html
@@ -42,7 +42,7 @@
 </dl>
 <h1 id="examples">EXAMPLES</h1>
 <dl>
-<dt>csv-ls -c name,size,blocks | csv-add-sql -e <code>&quot;</code>blocks * 512 AS space_used<code>&quot;</code> -s</dt>
+<dt><code>csv-ls -c name,size,blocks | csv-add-sql -e &quot;blocks * 512 AS space_used&quot; -s</code></dt>
 <dd>list files and real space they use
 </dd>
 </dl>
