--- a/manpages/csv-add-substring.1.html
+++ b/manpages/csv-add-substring.1.html
@@ -48,7 +48,7 @@
 </dl>
 <h1 id="examples">EXAMPLES</h1>
 <dl>
-<dt>csv-ls -c name,mtime | csv-add-substring -c mtime -n myear -p 1 -l 4 -s</dt>
+<dt><code>csv-ls -c name,mtime | csv-add-substring -c mtime -n myear -p 1 -l 4 -s</code></dt>
 <dd>list files and year they were last modified
 </dd>
 </dl>
