--- a/manpages/csv-count.1.html
+++ b/manpages/csv-count.1.html
@@ -39,7 +39,7 @@
 </dl>
 <h1 id="examples">EXAMPLES</h1>
 <dl>
-<dt>csv-ls | csv-count -r</dt>
+<dt><code>csv-ls | csv-count -r</code></dt>
 <dd>print number of files in the current directory
 </dd>
 </dl>
