--- a/manpages/csv-cut.1.html
+++ b/manpages/csv-cut.1.html
@@ -42,7 +42,7 @@
 </dl>
 <h1 id="examples">EXAMPLES</h1>
 <dl>
-<dt>csv-ls -l | csv-cut -c name,size -s</dt>
+<dt><code>csv-ls -l | csv-cut -c name,size -s</code></dt>
 <dd>list files and their sizes
 </dd>
 </dl>
