--- a/manpages/csv-env.1.html
+++ b/manpages/csv-env.1.html
@@ -64,7 +64,7 @@
 </table>
 <h1 id="examples">EXAMPLES</h1>
 <dl>
-<dt>csv-env -s</dt>
+<dt><code>csv-env -s</code></dt>
 <dd>print environment variables
 </dd>
 </dl>
