--- a/manpages/csv-exec.1.html
+++ b/manpages/csv-exec.1.html
@@ -27,7 +27,7 @@
 </dl>
 <h1 id="examples">EXAMPLES</h1>
 <dl>
-<dt>csv-ls -R -c full_path . | csv-grep -c full_path -e '~$' | csv-exec -- rm -f %full_path</dt>
+<dt><code>csv-ls -R -c full_path . | csv-grep -c full_path -e '~$' | csv-exec -- rm -f %full_path</code></dt>
 <dd>remove all backup files
 </dd>
 </dl>
