--- a/manpages/csv-grep.1.html
+++ b/manpages/csv-grep.1.html
@@ -57,7 +57,7 @@
 </dl>
 <h1 id="examples">EXAMPLES</h1>
 <dl>
-<dt>csv-ls -l | csv-grep -c name -e '.*.c$' -s</dt>
+<dt><code>csv-ls -l | csv-grep -c name -e '.*\.c$' -s</code></dt>
 <dd>list files with .c extension
 </dd>
 </dl>
