--- a/manpages/csv-head.1.html
+++ b/manpages/csv-head.1.html
@@ -36,10 +36,10 @@
 </dl>
 <h1 id="examples">EXAMPLES</h1>
 <dl>
-<dt>csv-head &lt; file1.csv</dt>
+<dt><code>csv-head &lt; file1.csv</code></dt>
 <dd>output the first 10 rows of file1.csv
 </dd>
-<dt>csv-head -n 5 &lt; file1.csv</dt>
+<dt><code>csv-head -n 5 &lt; file1.csv</code></dt>
 <dd>output the first 5 rows of file1.csv
 </dd>
 </dl>
