--- a/manpages/csv-ls.1.html
+++ b/manpages/csv-ls.1.html
@@ -367,10 +367,10 @@
 </table>
 <h1 id="examples">EXAMPLES</h1>
 <dl>
-<dt>csv-ls</dt>
+<dt><code>csv-ls</code></dt>
 <dd>print files (just names) in the current directory
 </dd>
-<dt>csv-ls -l -s</dt>
+<dt><code>csv-ls -l -s</code></dt>
 <dd>print files in the current directory, in a format similar to ls -l
 </dd>
 </dl>
