--- a/manpages/csv-max.1.html
+++ b/manpages/csv-max.1.html
@@ -42,7 +42,7 @@
 </dl>
 <h1 id="examples">EXAMPLES</h1>
 <dl>
-<dt>csv-ls -l | csv-max -c size</dt>
+<dt><code>csv-ls -l | csv-max -c size</code></dt>
 <dd>print the biggest file in the current directory
 </dd>
 </dl>
