--- a/manpages/csv-merge.1.html
+++ b/manpages/csv-merge.1.html
@@ -42,10 +42,10 @@
 </dl>
 <h1 id="examples">EXAMPLES</h1>
 <dl>
-<dt>csv-ls -c size,name | csv-merge -N file -p -</dt>
+<dt><code>csv-ls -c size,name | csv-merge -N file -p -</code></dt>
 <dd>equivalent of &quot;csv-ls -c size,name -T&quot;
 </dd>
-<dt>csv-users -T | csv-merge --path-with-table - -N file -p files.csv</dt>
+<dt><code>csv-users -T | csv-merge --path-with-table - -N file -p files.csv</code></dt>
 <dd>produces CSV stream with tables from 2 streams, one with a table (csv-users -T), and one without (files.csv)
 </dd>
 </dl>
