--- a/manpages/csv-min.1.html
+++ b/manpages/csv-min.1.html
@@ -42,7 +42,7 @@
 </dl>
 <h1 id="examples">EXAMPLES</h1>
 <dl>
-<dt>csv-ls -l | csv-min -c size</dt>
+<dt><code>csv-ls -l | csv-min -c size</code></dt>
 <dd>print the smallest file in the current directory
 </dd>
 </dl>
