--- a/manpages/csv-netstat.1.html
+++ b/manpages/csv-netstat.1.html
@@ -514,10 +514,10 @@
 </table>
 <h1 id="examples">EXAMPLES</h1>
 <dl>
-<dt>csv-netstat -ts</dt>
+<dt><code>csv-netstat -ts</code></dt>
 <dd>print information about all TCP sockets
 </dd>
-<dt>csv-netstat -46s</dt>
+<dt><code>csv-netstat -46s</code></dt>
 <dd>print information about all IPv4 and IPv6 sockets
 </dd>
 </dl>
