--- a/manpages/csv-ps.1.html
+++ b/manpages/csv-ps.1.html
@@ -694,7 +694,7 @@
 </table>
 <h1 id="examples">EXAMPLES</h1>
 <dl>
-<dt>csv-ps -S</dt>
+<dt><code>csv-ps -S</code></dt>
 <dd>browse all processes with custom pager
 </dd>
 </dl>
