--- a/manpages/csv-show.1.html
+++ b/manpages/csv-show.1.html
@@ -58,10 +58,10 @@
 </dl>
 <h1 id="examples">EXAMPLES</h1>
 <dl>
-<dt>csv-show &lt; file1.csv</dt>
+<dt><code>csv-show &lt; file1.csv</code></dt>
 <dd>print file1.csv in human-readable format
 </dd>
-<dt>csv-show --ui none &lt; file1.csv</dt>
+<dt><code>csv-show --ui none &lt; file1.csv</code></dt>
 <dd>print file1.csv in human-readable format without any pager
 </dd>
 </dl>
