--- a/manpages/csv-sort.1.html
+++ b/manpages/csv-sort.1.html
@@ -42,7 +42,7 @@
 </dl>
 <h1 id="examples">EXAMPLES</h1>
 <dl>
-<dt>csv-ls -c name,size | csv-sort -c size -r -s</dt>
+<dt><code>csv-ls -c name,size | csv-sort -c size -r -s</code></dt>
 <dd>print files, sorted by size, in descending order
 </dd>
 </dl>
