--- a/manpages/csv-sum.1.html
+++ b/manpages/csv-sum.1.html
@@ -45,7 +45,7 @@
 </dl>
 <h1 id="examples">EXAMPLES</h1>
 <dl>
-<dt>csv-ls -l | csv-sum -c size</dt>
+<dt><code>csv-ls -l | csv-sum -c size</code></dt>
 <dd>print the sum of sizes of all files in the current directory
 </dd>
 </dl>
