--- a/manpages/csv-tail.1.html
+++ b/manpages/csv-tail.1.html
@@ -36,10 +36,10 @@
 </dl>
 <h1 id="examples">EXAMPLES</h1>
 <dl>
-<dt>csv-tail &lt; file1.csv</dt>
+<dt><code>csv-tail &lt; file1.csv</code></dt>
 <dd>output the last 10 rows of file1.csv
 </dd>
-<dt>csv-tail -n 5 &lt; file1.csv</dt>
+<dt><code>csv-tail -n 5 &lt; file1.csv</code></dt>
 <dd>output the last 5 rows of file1.csv
 </dd>
 </dl>
