--- a/manpages/csv-uniq.1.html
+++ b/manpages/csv-uniq.1.html
@@ -39,7 +39,7 @@
 </dl>
 <h1 id="examples">EXAMPLES</h1>
 <dl>
-<dt>csv-ls -c owner_name | csv-uniq -c owner_name | csv-sort -c owner_name | csv-uniq -c owner_name</dt>
+<dt><code>csv-ls -c owner_name | csv-uniq -c owner_name | csv-sort -c owner_name | csv-uniq -c owner_name</code></dt>
 <dd>list owners of all files in the current directory
 </dd>
 </dl>
