--- a/manpages/csv-add-replace.1.html
+++ b/manpages/csv-add-replace.1.html
@@ -57,7 +57,7 @@
 </dl>
 <h1 id="examples">EXAMPLES</h1>
 <dl>
-<dt>csv-ls -c full_path | csv-add-replace -c full_path -E '(.*).c$' -r '%1.o' -n new -s</dt>
+<dt><code>csv-ls -c full_path | csv-add-replace -c full_path -E '(.*)\.c$' -r '%1.o' -n new -s</code></dt>
 <dd>list files; if file has .c extension it will be replaced by .o extension
 </dd>
 </dl>
