--- a/manpages/csv-add-rev.1.html
+++ b/manpages/csv-add-rev.1.html
@@ -42,7 +42,7 @@
 </dl>
 <h1 id="examples">EXAMPLES</h1>
 <dl>
-<dt>csv-ls | csv-add-rev -c name -n reversed_name -s</dt>
+<dt><code>csv-ls | csv-add-rev -c name -n reversed_name -s</code></dt>
 <dd>list files with names reversed
 </dd>
 </dl>
