--- a/manpages/csv-header.1.html
+++ b/manpages/csv-header.1.html
@@ -51,7 +51,7 @@
 </dl>
 <h1 id="examples">EXAMPLES</h1>
 <dl>
-<dt>csv-ls | csv-count -r | csv-header -m</dt>
+<dt><code>csv-ls | csv-count -r | csv-header -m</code></dt>
 <dd>print number of files in the current directory without csv header
 </dd>
 </dl>
