--- a/manpages/csv-tac.1.html
+++ b/manpages/csv-tac.1.html
@@ -34,7 +34,7 @@
 </dl>
 <h1 id="examples">EXAMPLES</h1>
 <dl>
-<dt>csv-tac file1.csv - file2.csv</dt>
+<dt><code>csv-tac file1.csv - file2.csv</code></dt>
 <dd>output file1.csv contents, the standard input, then file2.contents, each one in reverse
 </dd>
 </dl>
