updates from master

--- a/manpages/csv-header.1.html
+++ b/manpages/csv-header.1.html
@@ -33,7 +33,7 @@
 <dd>(NOT IMPLEMENTED YET) add types to columns by guessing based on their contents
 </dd>
 <dt>-M, --remove-types</dt>
-<dd>(NOT IMPLEMENTED YET) remove types from columns
+<dd>remove types from columns
 </dd>
 <dt>-m, --remove</dt>
 <dd>remove column header
