--- a/manpages/csv-nix-tools.7.html
+++ b/manpages/csv-nix-tools.7.html
@@ -76,6 +76,7 @@
 <h1 id="sink-tools">SINK TOOLS</h1>
 <ul>
 <li><strong><a href="csv-exec.1.html">csv-exec</a></strong>(1) - execute an external command for each row</li>
+<li><strong><a href="csv-plot.1.html">csv-plot</a></strong>(1) - generate 2D or 3D graph using gnuplot</li>
 <li><strong><a href="csv-show.1.html">csv-show</a></strong>(1) - print in human-readable format</li>
 </ul>
 <h1 id="common-options-for-all-source-tools">COMMON OPTIONS FOR ALL SOURCE TOOLS</h1>
