updates from master

--- a/manpages/csv-nix-tools.7.html
+++ b/manpages/csv-nix-tools.7.html
@@ -57,6 +57,7 @@
 <li><strong><a href="csv-cat.1.html">csv-cat</a></strong>(1) - concatenate CSV files and print on the standard output</li>
 <li><strong><a href="csv-count.1.html">csv-count</a></strong>(1) - count the number of columns and/or rows</li>
 <li><strong><a href="csv-cut.1.html">csv-cut</a></strong>(1) - remove and/or reorder columns</li>
+<li><strong><a href="csv-diff.1.html">csv-diff</a></strong>(1) - compare 2 or more files</li>
 <li><strong><a href="csv-grep.1.html">csv-grep</a></strong>(1) - filter rows matching a pattern</li>
 <li><strong><a href="csv-grep-rpn.1.html">csv-grep-rpn</a></strong>(1) - filter rows for which RPN expression returns true</li>
 <li><strong><a href="csv-grep-sql.1.html">csv-grep-sql</a></strong>(1) - filter rows for which SQL expression returns true</li>
