updates from master

--- a/manpages/csv-nix-tools.7.html
+++ b/manpages/csv-nix-tools.7.html
@@ -80,6 +80,7 @@
 <li><strong><a href="csv-plot.1.html">csv-plot</a></strong>(1) - generate 2D or 3D graph using gnuplot</li>
 <li><strong><a href="csv-show.1.html">csv-show</a></strong>(1) - print in human-readable format</li>
 <li><strong><a href="csv-to-html.1.html">csv-to-html</a></strong>(1) - print in HTML format</li>
+<li><strong><a href="csv-to-json.1.html">csv-to-json</a></strong>(1) - print in JSON format</li>
 <li><strong><a href="csv-to-xml.1.html">csv-to-xml</a></strong>(1) - print in XML format</li>
 </ul>
 <h1 id="common-options-for-all-source-tools">COMMON OPTIONS FOR ALL SOURCE TOOLS</h1>
