--- a/manpages/csv-to-html.1.html
+++ b/manpages/csv-to-html.1.html
@@ -55,6 +55,6 @@
 </dd>
 </dl>
 <h1 id="see-also">SEE ALSO</h1>
-<p><strong><a href="csv-show.1.html">csv-show</a></strong>(1), <strong><a href="csv-to-xml.1.html">csv-to-xml</a></strong>(1), <strong><a href="csv-nix-tools.7.html">csv-nix-tools</a></strong>(7)</p>
+<p><strong><a href="csv-show.1.html">csv-show</a></strong>(1), <strong><a href="csv-to-json.1.html">csv-to-json</a></strong>(1), <strong><a href="csv-to-xml.1.html">csv-to-xml</a></strong>(1), <strong><a href="csv-nix-tools.7.html">csv-nix-tools</a></strong>(7)</p>
 </body>
 </html>
