updates from master

--- a/manpages/csv-header.1.html
+++ b/manpages/csv-header.1.html
@@ -27,7 +27,7 @@
 <dd>set type of column <em>NAME1</em> to <em>TYPE1</em>, type of column <em>NAME2</em> to <em>TYPE2</em>, etc.
 </dd>
 <dt>-G, --guess-types</dt>
-<dd>(NOT IMPLEMENTED YET) add types to columns by guessing based on their contents
+<dd>add types to columns by guessing based on their contents
 </dd>
 <dt>-M, --remove-types</dt>
 <dd>remove types from columns
