--- a/manpages/csv-ls.1.html
+++ b/manpages/csv-ls.1.html
@@ -56,6 +56,12 @@
 <dt>-U</dt>
 <dd>do not sort; list entries in directory order
 </dd>
+<dt>--colors</dt>
+<dd>add color columns
+</dd>
+<dt>--no-colors</dt>
+<dd>don’t add color columns
+</dd>
 <dt>--help</dt>
 <dd>display this help and exit
 </dd>
