--- a/manpages/csv-nix-tools.7.html
+++ b/manpages/csv-nix-tools.7.html
@@ -25,7 +25,7 @@
 <li>each column has a type, encoded in the name using name:type syntax</li>
 <li>optional "_table" column having special meaning</li>
 </ul>
-<p>Currently used types are: string, int, string[], int[], although array types are not well supported at the moment (they are produced by some tools, but there’s no easy way to process them).</p>
+<p>Currently used types are: string, int, float, string[], int[], float[], although array types are not well supported at the moment (they are produced by some tools, but there’s no easy way to process them).</p>
 <p>Column "_table" resolves a problem of storing multiple sets of data in one CSV stream. It allows:</p>
 <ul>
 <li>merging of data from multiple sources,</li>
