--- a/manpages/csv-sql.1.html
+++ b/manpages/csv-sql.1.html
@@ -58,26 +58,31 @@
 <td>1, 1294, -89</td>
 </tr>
 <tr class="even">
+<td>[-][0-9]+.[0-9]*</td>
+<td>floating point number</td>
+<td>1.0, 12.94, -0.89</td>
+</tr>
+<tr class="odd">
 <td>[-]0x[0-9a-fA-F]+</td>
 <td>hexadecimal integer</td>
 <td>0x1, 0x1A34, -0x8A</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td>[-]0[0-9]+</td>
 <td>octal integer</td>
 <td>01, 01234, -067</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td>[-]0b[01]+</td>
 <td>binary integer</td>
 <td>0b1, 0b1101, -0b10</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td>'[^']*'</td>
 <td>string</td>
 <td>'text'</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td>"[^"]*"</td>
 <td>string</td>
 <td>"text"</td>
