updates from master

--- a/manpages/csv-ls.1.html
+++ b/manpages/csv-ls.1.html
@@ -21,7 +21,7 @@
 <h1 id="synopsis">SYNOPSIS</h1>
 <p><strong>csv-ls</strong> [OPTION]… [FILE]…</p>
 <h1 id="description">DESCRIPTION</h1>
-<p>List information about the FILEs (the current directory by default). Sort entries alphabetically if -U is not specified.</p>
+<p>List information about FILEs (current directory by default). Sort entries alphabetically if -U is not specified.</p>
 <dl>
 <dt>-a, --all</dt>
 <dd>do not ignore entries starting with .
