--- a/manpages/csv-nix-tools.7.html
+++ b/manpages/csv-nix-tools.7.html
@@ -39,8 +39,10 @@
 <li><strong><a href="csv-group-members.1.html">csv-group-members</a></strong>(1) - list system groups and users that belong to them</li>
 <li><strong><a href="csv-groups.1.html">csv-groups</a></strong>(1) - list system groups</li>
 <li><strong><a href="csv-ls.1.html">csv-ls</a></strong>(1) - list files</li>
+<li><strong><a href="csv-lstree.1.html">csv-lstree</a></strong>(1) - list files in hierachical manner (wrapper around <strong><a href="csv-ls.1.html">csv-ls</a></strong>(1) and <strong><a href="csv-tree.1.html">csv-tree</a></strong>(1))</li>
 <li><strong><a href="csv-netstat.1.html">csv-netstat</a></strong>(1) - list network connections</li>
 <li><strong><a href="csv-ps.1.html">csv-ps</a></strong>(1) - list processes</li>
+<li><strong><a href="csv-pstree.1.html">csv-pstree</a></strong>(1) - list processes in hierachical manner (wrapper around <strong><a href="csv-ps.1.html">csv-ps</a></strong>(1) and <strong><a href="csv-tree.1.html">csv-tree</a></strong>(1))</li>
 <li><strong><a href="csv-users.1.html">csv-users</a></strong>(1) - list system users</li>
 </ul>
 <h1 id="processing-tools">PROCESSING TOOLS</h1>
@@ -72,6 +74,7 @@
 <li><strong><a href="csv-sum.1.html">csv-sum</a></strong>(1) - take a sum of numerical or string column(s)</li>
 <li><strong><a href="csv-tac.1.html">csv-tac</a></strong>(1) - concatenate CSV files and print on the standard output in reverse</li>
 <li><strong><a href="csv-tail.1.html">csv-tail</a></strong>(1) - print on the standard output the end of a CSV file from standard input</li>
+<li><strong><a href="csv-tree.1.html">csv-tree</a></strong>(1) - process hierarchical data</li>
 <li><strong><a href="csv-uniq.1.html">csv-uniq</a></strong>(1) - merge adjacent duplicate rows</li>
 </ul>
 <h1 id="sink-tools">SINK TOOLS</h1>
