updates from master

--- a/manpages/csv-lstree.1.html
+++ b/manpages/csv-lstree.1.html
@@ -17,19 +17,19 @@
 <h1 class="title">csv-lstree</h1>
 </header>
 <h1 id="name">NAME</h1>
-<p>csv-lstree - list files in hierachical manner</p>
+<p>csv-lstree - list files in hierarchical manner</p>
 <h1 id="synopsis">SYNOPSIS</h1>
 <p><strong>csv-lstree</strong> [OPTION]… [FILE]…</p>
 <h1 id="description">DESCRIPTION</h1>
 <p>Recursively list FILEs (starting from current directory by default).</p>
 <dl>
-<dt>-f, --full-path</dt>
+<dt>-f</dt>
 <dd>add parent directory prefix to file names
 </dd>
-<dt>-s, --show</dt>
+<dt>-s</dt>
 <dd>print output in table format
 </dd>
-<dt>-S, --show-full</dt>
+<dt>-S</dt>
 <dd>print output in table format with pager
 </dd>
 </dl>
