--- a/manpages/csv-tree.1.html
+++ b/manpages/csv-tree.1.html
@@ -23,6 +23,9 @@
 <h1 id="description">DESCRIPTION</h1>
 <p>Read CSV stream from standard input, build hierarchical structure and print back data with hierarchical information.</p>
 <dl>
+<dt>-f, --filter=<em>KEY</em></dt>
+<dd>print only the matching row and its descendants
+</dd>
 <dt>-i, --indent=<em>NAME</em>[,<em>NEW-NAME</em>]</dt>
 <dd>indent data from column <em>NAME</em> and put it in a new column <em>NEW-NAME</em>, if <em>NEW-NAME</em> is omitted column <em>NAME</em> is replaced
 </dd>
